[package]
name = "pgtypes"
version = "0.1.0"
authors = ["Kaare Rasmussen <kaare@jasonic.dk>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["postgresql", "numeric", "datetime"]
repository = "https://github.com/kaare/pgtypes-rs"
homepage = "https://github.com/kaare/pgtypes-rs"
description = """
Bindings to libpgtypes with numeric and datetime calculations.
"""
categories = ["postgresql", "api-bindings"]

build = "build.rs"

[dependencies]
libc = "0"

[build-dependencies]
bindgen = "0.25.0"
